%%{init: {"theme":"neutral","themeVariables":{
  "fontFamily":"Inter",
  "primaryColor":"#40826D","primaryBorderColor":"#40826D","primaryTextColor":"#0a0a0a",
  "lineColor":"#40826D","tertiaryColor":"#ffffff"}}}%%
erDiagram
  ACCOUNTS {
    UUID id PK
    BIGINT balance_cents
    INT version
    TIMESTAMPTZ created_at
    TIMESTAMPTZ updated_at
  }

  LEDGER_ENTRIES {
    UUID id PK
    UUID debit_account_id FK
    UUID credit_account_id FK
    BIGINT amount_cents
    TIMESTAMPTZ created_at
  }

  IDEMPOTENCY_KEYS {
    UUID idempotency_key PK
    TEXT status
    TEXT request_hash
    INT response_status_code
    BYTEA response_body
    TIMESTAMPTZ created_at
    TIMESTAMPTZ expires_at
  }

  ACCOUNTS ||--o{ LEDGER_ENTRIES : debited_by
  ACCOUNTS ||--o{ LEDGER_ENTRIES : credited_by
